[gd_scene load_steps=4 format=2]

[ext_resource path="res://entities/weapons/assets/bows/arrow/arrow.png" type="Texture" id=1]
[ext_resource path="res://entities/weapons/scripts/arrow.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.043, 0.515069 )

[node name="arrow" type="RigidBody2D"]
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.0460701, -0.460699 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="LifeTimer" type="Timer" parent="."]
one_shot = true

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 0.0460701, -0.460699 )
shape = SubResource( 1 )
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
